--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
 	"version": "0.1.0",
 	"type": "module",
 	"main": "./index.js",
+	"types": "./index.d.ts",
 	"scripts": {
-		"watch": "tsc --watch",
-		"build": "tsc && cp ./package.json ./dist/package.json"
+		"watch": "tsup --watch",
+		"build": "tsup"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.26",
 		"ethers": "^5.7.2",
 		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"tsup": "^6.5.0",
+		"typescript": "^4.9.4",
 		"wagmi": "^0.10.10"
 	},
 	"peerDependencies": {
 		"ethers": "^5.7.2",
-		"react": "^18.2.0",
+		"react": ">=17.0.0",
+		"react-dom": ">=17.0.0",
 		"wagmi": "^0.10.10"
 	}
 }
