--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-	"license": "MIT",
-	"name": "@badublanc/builder-hooks",
-	"version": "0.1.0",
-	"type": "module",
-	"main": "./index.js",
-	"types": "./index.d.ts",
-	"scripts": {
-		"watch": "tsup --watch",
-		"build": "tsup"
-	},
-	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"@types/react": "^18.0.26",
-		"ethers": "^5.7.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"tsup": "^6.5.0",
-		"typescript": "^4.9.4",
-		"wagmi": "^0.10.10"
-	},
-	"peerDependencies": {
-		"ethers": "^5.7.2",
-		"react": ">=17.0.0",
-		"react-dom": ">=17.0.0",
-		"wagmi": "^0.10.10"
-	}
+  "name": "builder-hooks",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "wagmi": "^0.10.11"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
+  }
 }
