--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "builder-hooks",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.1",
-    "ethers": "^5.7.2",
-    "react": "^18.2.0",
-    "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
-    "wagmi": "^0.10.11"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
-  }
+	"name": "builder-hooks",
+	"private": true,
+	"homepage": ".",
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@rainbow-me/rainbowkit": "^0.8.1",
+		"ethers": "^5.7.2",
+		"react": "^18.2.0",
+		"react-countdown": "^2.3.5",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.7.0",
+		"wagmi": "^0.10.11"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@vitejs/plugin-react": "^3.0.0",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.4",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0"
+	}
 }
