--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build:embed": "tsc && vite build",
+		"build:pkg": "tsup",
+		"watch:pkg": "tsup --watch",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -24,6 +26,7 @@
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.4",
+		"tsup": "^6.5.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	}
