--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@rainbow-me/rainbowkit": "^0.8.1",
+		"connectkit": "^1.1.2",
 		"ethers": "^5.7.2",
 		"react": "^18.2.0",
 		"react-countdown": "^2.3.5",
