--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"classnames": "^2.3.2",
 		"connectkit": "^1.1.2",
 		"ethers": "^5.7.2",
 		"react": "^18.2.0",
 		"react-countdown": "^2.3.5",
 		"react-dom": "^18.2.0",
+		"react-loading-skeleton": "^3.1.0",
 		"wagmi": "^0.10.11"
 	},
 	"devDependencies": {
