--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@rainbow-me/rainbowkit": "^0.8.1",
+		"@zoralabs/zorb": "^0.1.0",
 		"classnames": "^2.3.2",
-		"connectkit": "^1.1.2",
 		"ethers": "^5.7.2",
 		"react": "^18.2.0",
 		"react-countdown": "^2.3.5",
 		"react-dom": "^18.2.0",
 		"react-loading-skeleton": "^3.1.0",
-		"wagmi": "^0.10.11"
+		"wagmi": "^0.11.2"
 	},
 	"devDependencies": {
+		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+		"@tailwindcss/line-clamp": "^0.4.2",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@vitejs/plugin-react": "^3.0.0",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
+		"rollup-plugin-polyfill-node": "^0.12.0",
 		"tailwindcss": "^3.2.4",
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.3",
