--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@rainbow-me/rainbowkit": "^0.8.1",
 		"@zoralabs/zorb": "^0.1.0",
 		"classnames": "^2.3.2",
+		"dayjs": "^1.11.7",
 		"ethers": "^5.7.2",
 		"react": "^18.2.0",
 		"react-countdown": "^2.3.5",
