--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-	"name": "builder-hooks",
-	"private": true,
-	"homepage": ".",
+	"name": "nouns-builder-components",
+	"description": "React hooks and components for Nouns Builder DAOs",
+	"license": "MIT",
 	"version": "0.0.0",
+	"contributors": [
+		"ripe0x.eth <unripeengine@gmail.com>",
+		"badublanc.eth <badu@hey.com>"
+	],
 	"type": "module",
+	"main": "./index.js",
+	"types": "./index.d.ts",
 	"scripts": {
 		"dev": "vite",
 		"build:embed": "tsc && vite build",
@@ -12,31 +18,46 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@rainbow-me/rainbowkit": "^0.8.1",
 		"@zoralabs/zorb": "^0.1.0",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
-		"ethers": "^5.7.2",
-		"react": "^18.2.0",
 		"react-countdown": "^2.3.5",
-		"react-dom": "^18.2.0",
-		"react-loading-skeleton": "^3.1.0",
+		"react-loading-skeleton": "^3.1.0"
+	},
+	"peerDependencies": {
+		"@rainbow-me/rainbowkit": "^0.8.1",
+		"ethers": "^5.7.2",
+		"react": ">=17.0.0",
+		"react-dom": ">=17.0.0",
 		"wagmi": "^0.11.2"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+		"@rainbow-me/rainbowkit": "^0.8.1",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@vitejs/plugin-react": "^3.0.0",
 		"autoprefixer": "^10.4.13",
+		"ethers": "^5.7.2",
 		"postcss": "^8.4.21",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"rollup-plugin-polyfill-node": "^0.12.0",
 		"tailwindcss": "^3.2.4",
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
-	}
+		"vite": "^4.0.0",
+		"wagmi": "^0.11.2"
+	},
+	"keywords": [
+		"nouns",
+		"nouns builder",
+		"zora",
+		"builderdao",
+		"web3",
+		"ethereum"
+	]
 }
