--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 	},
 	"peerDependencies": {
 		"@rainbow-me/rainbowkit": "^0.8.1",
-		"ethers": "^5.7.2",
+		"ethers": ">=5.5.1",
 		"react": ">=17.0.0",
 		"react-dom": ">=17.0.0",
-		"wagmi": "^0.11.2"
+		"wagmi": "0.9.x"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
@@ -62,6 +62,8 @@
 		"builderdao",
 		"web3",
 		"ethereum",
+		"hooks",
+		"blockchain",
 		"cloudnouns"
 	]
 }
