--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
 		"wagmi": "^0.11.2"
 	},
 	"exports": {
-		".": "./index.js"
+		".": [
+			"./index.js",
+			"./styles.css"
+		]
 	},
 	"keywords": [
 		"nouns",
