--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"types": "./index.d.ts",
 	"scripts": {
 		"dev": "vite",
-		"bundle": "tsup && yarn build",
+		"bundle": "tsup",
 		"build": "tsc && vite build",
 		"watch:pkg": "tsup --watch",
 		"preview": "vite preview"
@@ -26,7 +26,7 @@
 	},
 	"peerDependencies": {
 		"@rainbow-me/rainbowkit": "^0.8.1",
-		"ethers": ">=5.5.1",
+		"ethers": "^5.7.2",
 		"react": ">=17.0.0",
 		"react-dom": ">=17.0.0",
 		"wagmi": "0.9.x"
