--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
 		"react-countdown": "^2.3.5",
-		"react-loading-skeleton": "^3.1.0"
+		"react-loading-skeleton": "^3.1.0",
+		"use-prop-house": "^0.1.3"
 	},
 	"peerDependencies": {
 		"@rainbow-me/rainbowkit": "^0.8.1",
