--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"types": "./index.d.ts",
 	"scripts": {
 		"dev": "vite",
-		"bundle": "tsup && yarn build",
+		"bundle": "tsup",
 		"build": "tsc && vite build",
 		"watch:pkg": "tsup --watch",
 		"preview": "vite preview"
@@ -22,11 +22,12 @@
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
 		"react-countdown": "^2.3.5",
-		"react-loading-skeleton": "^3.1.0"
+		"react-loading-skeleton": "^3.1.0",
+		"use-prop-house": "^0.1.3"
 	},
 	"peerDependencies": {
 		"@rainbow-me/rainbowkit": "^0.8.1",
-		"ethers": ">=5.5.1",
+		"ethers": "^5.7.2",
 		"react": ">=17.0.0",
 		"react-dom": ">=17.0.0",
 		"wagmi": "0.9.x"
