--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "nouns-builder-components",
 	"description": "React hooks and components for Nouns Builder DAOs",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/badublanc/nouns-builder-components.git"
+	},
+	"homepage": "https://buildercomponents.wtf",
 	"license": "MIT",
 	"version": "0.0.0",
 	"contributors": [
