--- a/package.json
+++ b/package.json
@@ -29,36 +29,38 @@
 		"dayjs": "^1.11.7",
 		"react-countdown": "^2.3.5",
 		"react-loading-skeleton": "^3.1.0",
-		"use-prop-house": "^0.1.3",
-		"react-responsive": "^9.0.2"
+		"react-responsive": "^9.0.2",
+		"use-prop-house": "^0.1.3"
 	},
 	"peerDependencies": {
-		"@rainbow-me/rainbowkit": "^0.8.1",
-		"ethers": "^5.7.2",
+		"@rainbow-me/rainbowkit": "^1",
 		"react": ">=17.0.0",
 		"react-dom": ">=17.0.0",
-		"wagmi": "0.9.x"
+		"viem": "^1",
+		"wagmi": "^1"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-		"@rainbow-me/rainbowkit": "^0.8.1",
+		"@rainbow-me/rainbowkit": "^1.1.4",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@vitejs/plugin-react": "^3.0.0",
 		"autoprefixer": "^10.4.13",
-		"ethers": "^5.7.2",
 		"postcss": "^8.4.21",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rollup-plugin-polyfill-node": "^0.12.0",
 		"tailwindcss": "^3.2.4",
 		"tsup": "^6.5.0",
-		"typescript": "^4.9.3",
+		"typescript": "^5.2.2",
+		"viem": "^1.18.1",
 		"vite": "^4.0.0",
-		"wagmi": "^0.11.2"
+		"wagmi": "^1.4.5"
 	},
 	"exports": {
 		".": [
